Add interpolations, fixed bugs