@@ -1,5 +1,6 @@
 package hywt.fractal.animator;
 
+import hywt.fractal.animator.interp.Interpolator;
 import hywt.fractal.animator.keyframe.FractalFrame;
 import hywt.fractal.animator.keyframe.FractalScale;
 import hywt.fractal.animator.keyframe.KeyframeManager;
@@ -56,17 +57,21 @@ public class VideoRenderer {
 
         double startTime = 2;
         double endTime = 2;
-        List<Double> initScales = Collections.nCopies((int) (fps * startTime), 0.0);
-        renderFrame(initScales, process, manager.get(0));
+        List<Double> initScales = Collections.nCopies((int) (fps * startTime), manager.getFirst().getScale().getZooms());
+        renderFrame(initScales, process, manager.get(0), manager.get(1), manager.get(2));
 
+        frameNum = 0;
+        double currentZoom = manager.get(0).getScale().getZooms();
         for (int i = 0; i < manager.size(); i++) {
             FractalFrame frame = manager.get(i);
             List<Double> scales = new ArrayList<>();
             double zooms = frame.getScale().getZooms() + 1;
 
-            while (interpolator.isInRange(zooms)) {
+            while (currentZoom < zooms + 1) {
                 double t = frameNum * 1.0 / fps;
                 double v = interpolator.get(t);
+                currentZoom = v;
+//                System.out.printf("%.2f %.2f %.2f\n", t,v,zooms);
                 if (v > zooms) {
                     break;
                 }
@@ -75,12 +80,19 @@ public class VideoRenderer {
             }
 
             if (!scales.isEmpty()) {
-                renderFrame(scales, process, frame, manager.get(i + 1));
+                renderFrame(scales, process,
+                        frame,
+                        manager.get(i + 1),
+                        manager.get(i + 2),
+                        manager.get(i + 3),
+                        manager.get(i + 4),
+                        manager.get(i + 5)
+                );
             }
         }
 
-        List<Double> endScales = Collections.nCopies((int) (fps * endTime), manager.get(manager.size() - 1).getScale().getZooms());
-        renderFrame(endScales, process, manager.get(manager.size() - 1));
+        List<Double> endScales = Collections.nCopies((int) (fps * endTime), manager.getLast().getScale().getZooms());
+        renderFrame(endScales, process, manager.getLast());
 
         process.finish();
     }
@@ -94,7 +106,8 @@ public class VideoRenderer {
 
         BufferedImage[] images = new BufferedImage[frames.length];
         for (int i = 0; i < images.length; i++) {
-            images[i] = frames[i].getImage();
+            if (frames[i] != null)
+                images[i] = frames[i].getImage();
         }
 
         for (double factor : factors) {
@@ -102,17 +115,17 @@ public class VideoRenderer {
                 BufferedImage buffer = framePool.take();
                 Graphics2D g2d = buffer.createGraphics();
                 g2d.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
-                // g2d.setRenderingHint(RenderingHints.KEY_INTERPOLATION,
-                // RenderingHints.VALUE_INTERPOLATION_BICUBIC);
+//                g2d.setRenderingHint(RenderingHints.KEY_INTERPOLATION, RenderingHints.VALUE_INTERPOLATION_BILINEAR);
                 int bgWidth = buffer.getWidth();
                 int bgHeight = buffer.getHeight();
 
 
                 for (int i = 0; i < images.length; i++) {
-                    putImage(images[i], g2d, (factor - baseFactor) - i, bgWidth, bgHeight);
+                    if (frames[i] != null)
+                        putImage(images[i], g2d, (factor - baseFactor) - i, bgWidth, bgHeight);
                 }
 
-                for (ScaleIndicator indicator: indicators) {
+                for (ScaleIndicator indicator : indicators) {
                     indicator.draw(g2d, new FractalScale(factor), width, height);
                 }
 
@@ -130,7 +143,8 @@ public class VideoRenderer {
     }
 
     private void putImage(BufferedImage image, Graphics2D g2d, double factor, int bgWidth, int bgHeight) {
-        double scaleFactor = Math.pow(2, factor);
+        double scaleFactor = Math.pow(2, factor) * ((double) bgWidth / Math.max(image.getWidth(), image.getHeight()));
+//        System.out.println();
 
         int imgWidth = image.getWidth();
         int imgHeight = image.getHeight();
@@ -141,11 +155,11 @@ public class VideoRenderer {
         g2d.drawImage(image, new AffineTransform(scaleFactor, 0, 0, scaleFactor, offsetX, offsetY), null);
     }
 
-    public void addScaleIndicator(ScaleIndicator sc){
+    public void addScaleIndicator(ScaleIndicator sc) {
         indicators.add(sc);
     }
 
-    public void removeScaleIndicator(ScaleIndicator sc){
+    public void removeScaleIndicator(ScaleIndicator sc) {
         indicators.remove(sc);
     }
 }
